--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                     </div>
 
 
-                    <a href="#" class="cart-add cart-btn  col-sm-12" data-price="125.00" data-name="Fall Limited Edition Sneakers" src="images/image-product-1.jpg">
+                    <a href="#" id="cart-add" class="cart-add cart-btn  col-sm-12" data-price="125.00" data-name="Fall Limited Edition Sneakers" src="images/image-product-1.jpg">
                         <img src="images/icon-cart.svg" alt="Shopping Cart" style="" class="shopping-cart" />
                         Add to Cart
                     </a>
